Work_Space1/src/turtlesim_controller/log/build_2023-03-11_18-15-58/turtlesim_controller/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/soroush/robatics/Assignment2/assi2/src/turtlesim_controller/install/turtlesim_controller/lib/python3.10/site-packages/turtlesim_controller/turtlesim_controller.py", line 5
    from turtlesim.msg._pose
                            ^
SyntaxError: invalid syntax

